; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_zalloc.c_is_zone_map_nearing_exhaustion.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/kern/extr_zalloc.c_is_zone_map_nearing_exhaustion.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@zone_map = common dso_local global %struct.TYPE_4__* null, align 8
@zone_map_jetsam_limit = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_zone_map_nearing_exhaustion() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** @zone_map, align 8
  %5 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %2, align 4
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** @zone_map, align 8
  %8 = call i32 @vm_map_max(%struct.TYPE_4__* %7)
  %9 = load %struct.TYPE_4__*, %struct.TYPE_4__** @zone_map, align 8
  %10 = call i32 @vm_map_min(%struct.TYPE_4__* %9)
  %11 = sub nsw i32 %8, %10
  store i32 %11, i32* %3, align 4
  %12 = load i32, i32* %2, align 4
  %13 = load i32, i32* %3, align 4
  %14 = load i32, i32* @zone_map_jetsam_limit, align 4
  %15 = mul nsw i32 %13, %14
  %16 = sdiv i32 %15, 100
  %17 = icmp sgt i32 %12, %16
  br i1 %17, label %18, label %20

18:                                               ; preds = %0
  %19 = load i32, i32* @TRUE, align 4
  store i32 %19, i32* %1, align 4
  br label %22

20:                                               ; preds = %0
  %21 = load i32, i32* @FALSE, align 4
  store i32 %21, i32* %1, align 4
  br label %22

22:                                               ; preds = %20, %18
  %23 = load i32, i32* %1, align 4
  ret i32 %23
}

declare dso_local i32 @vm_map_max(%struct.TYPE_4__*) #1

declare dso_local i32 @vm_map_min(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
